# python-data-lake

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: dag_libros_mas_vendidos.py
src/scripts/: ingesta_bronze.py  ingesta_gold.py  ingesta_silver.py
